<resources>
    <string name="app_name">BSnanny</string>
    <string name="connect_with_nanny">Connect with Nanny</string>
    <string name="view_text">Lorem Ipsum is simply dummy text of the printing and typesetting industry.
        Lorem Ipsum has been the industry\'s standard dummy text ever since</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="find_the_be">Find The  Best Nanny</string>
    <string name="choose_the_">Choose The  Best\u000DNanny</string>
    <string name="register">Register</string>
    <string name="signup">Don’t have an account? Sign up</string>
    <string name="sign_in">Sign In</string>
    <string name="lorem_ipsum">Lorem ipsum dolor sit amet consectetur. Ac parturient nisl nullam nibh tincidunt nulla.</string>
    <string name="sign_up">Sign Up</string>
    <string name="verification">Verification</string>
    <string name="rating_amp_reviews"><![CDATA[Rating & Reviews]]></string>
    <string name="adam">Adam</string>
    <string name="_16_minutes_ago">16 minutes ago</string>
    <string name="you_have_14_pending_requests">You have 14 pending requests</string>
    <string name="intro">Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry\'s standard dummy text ever since</string>
    <string name="mapbox_access_token">sk.eyJ1IjoiendpZ2F0bzEiLCJhIjoiY2xqNXAweTQ5MGdibDNsdGV4ZGIxcTBuZyJ9.tQtDtSyAb4zzOq0sxSZcow</string>
    <string name="open">Open\n</string>
    <string name="close">close</string>
    <string name="weekly">Weekly</string>
    <string name="by_weekly">By Weekly</string>
    <string-array name="by_weekly">
        <item>$500</item>
        <item>$600</item>
        <item>$700</item>
        <item>$800</item>
        <item>$900</item>
        <item>$1000</item>
    </string-array>
    <string name="by_monthly">By Monthly</string>
    <string name="lorem_ipsum1">Lorem ipsum dolor sit amet consectetur. Vitae ut ut sagittis malesuada. Sed enim pretium accumsan et magnis cras a non. Leo vel a nisl pellentesque ut accumsan convallis suspendisse nulla.</string>
    <string name="lorem_ipsum_dolor_sit_amet_consectetur">Lorem ipsum dolor sit amet consectetur.</string>
    <string name="adam_smith_xxxx_5652">Adam Smith XXXX 5652</string>
    <string-array name="by_monthly">
        <item>$1000</item>
        <item>$1200</item>
        <item>$1400</item>
        <item>$1600</item>
        <item>$1800</item>
    </string-array>
    <string-array name="weekly">
        <item>$300</item>
        <item>$350</item>
        <item>$400</item>
        <item>$450</item>
        <item>$500</item>
    </string-array>
    <string-array name="Duration">
        <item>Weekly</item>
        <item>By Weekly</item>
        <item>Monthly</item>
    </string-array>
    <string-array name="Age">
        <item>0–6 months</item>
        <item>6–12 months</item>
        <item>01–02 years</item>
        <item>02–03 years</item>
        <item>03–04 years</item>
        <item>04–05 years</item>
        <item>05–06 years</item>
        <item>06–07 years</item>
        <item>07–08 years</item>
        <item>08–09 years</item>
        <item>09–10 years</item>
    </string-array>
    <string name="add_new_card">Add new card</string>
    <string name="card_number">Card Number</string>
    <string name="card_holder_name">Card Holder Name</string>
    <string name="cvv">CVV</string>
    <string name="expiry">Expiry</string>
    <string name="add_card_btn">Add</string>
    <string name="loading">Adding Card</string>
    <integer-array name="progress_colors">
        <item>@color/quantum_yellow</item>
        <item>@color/white</item>
        <item>@color/green</item>
    </integer-array>
    <plurals name="hours_ago">
        <item quantity="one">%d hour ago</item>
        <item quantity="other">%d hours ago</item>
    </plurals>

    <plurals name="minutes_ago">
        <item quantity="one">%d minute ago</item>
        <item quantity="other">%d minutes ago</item>
    </plurals>

    <string name="place_autocomplete_query_hint">Search for places</string>
    <string name="place_autocomplete_reverse_geocoding_error_message">Unable to locate selected coordinate</string>
    <string name="place_autocomplete_selection_error">Error happened during request</string>
    <string name="bookings">Bookings</string>
    <string name="notifications">Notifications</string>
    <string name="invitations">Invitations</string>
    <string name="ratings_and_reviews">Ratings and Reviews</string>
    <string name="job_requests">Job Requests</string>
    <string name="logout">Logout</string>

</resources>