<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/toolbar_bg"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
    <TextView
        android:id="@+id/addText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"

        android:fontFamily="@font/poppins_medium"
        android:textSize="18sp"
        android:textColor="@color/black"
        android:layout_marginTop="10dp"
        android:padding="10dp"
        android:text="@string/add_new_card"
        android:gravity="center"/>
    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/til1"
        app:layout_constraintTop_toBottomOf="@id/addText"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="match_parent"
        android:hint="@string/card_number"
        app:boxStrokeColor="@color/purpleU1"
        app:hintTextColor="@color/purpleU1"
        android:textColorHint="@color/purpleU1"
        app:boxCornerRadiusBottomEnd="8dp"
        app:boxCornerRadiusTopEnd="8dp"
        app:boxCornerRadiusTopStart="8dp"
        app:boxCornerRadiusBottomStart="8dp"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginTop="10dp"
        app:errorIconDrawable="@null"

        android:layout_height="wrap_content">
        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/dialog_add_card_number"
            android:layout_width="match_parent"
            android:textColor="@color/black"
            android:digits="0123456789- "

            android:inputType="number"
            android:maxLength="19"
            android:cursorVisible="true"
            android:textCursorDrawable="@color/black"
            android:layout_height="match_parent"
            android:fontFamily="@font/poppins_medium"
            android:textSize="14sp"/>

    </com.google.android.material.textfield.TextInputLayout>
    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/til2"
        app:layout_constraintTop_toBottomOf="@id/til1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="match_parent"
        android:hint="@string/card_holder_name"
        app:boxStrokeColor="@color/purpleU1"
        app:hintTextColor="@color/purpleU1"
        android:textColorHint="@color/purpleU1"
        app:boxCornerRadiusBottomEnd="8dp"
        app:boxCornerRadiusTopEnd="8dp"
        app:boxCornerRadiusTopStart="8dp"
        app:boxCornerRadiusBottomStart="8dp"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginTop="10dp"
        android:layout_height="wrap_content">
        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/dialog_add_card_holder_name"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:textColor="@color/black"
            android:fontFamily="@font/poppins_medium"
            android:textSize="14sp"/>
    </com.google.android.material.textfield.TextInputLayout>

    <LinearLayout
        android:id="@+id/ll1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/til2"
        android:layout_marginTop="10dp"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:orientation="horizontal">
        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/cvvTil"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            app:boxStrokeColor="@color/purpleU1"
            android:textColorHint="@color/purpleU1"
            app:boxCornerRadiusBottomEnd="8dp"
            app:boxCornerRadiusTopEnd="8dp"
            app:boxCornerRadiusTopStart="8dp"
            app:boxCornerRadiusBottomStart="8dp"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            app:hintTextColor="@color/purpleU1"
            android:layout_marginEnd="16dp"
            android:hint="@string/cvv">
            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/card_cvv"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:inputType="numberPassword"
                android:fontFamily="@font/poppins_medium"
                android:textSize="14sp"
                android:maxLength="3"
                android:textColor="@color/black"/>
        </com.google.android.material.textfield.TextInputLayout>
        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/expiryTil"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            app:boxStrokeColor="@color/purpleU1"
            android:textColorHint="@color/purpleU1"
            app:boxCornerRadiusBottomEnd="8dp"
            app:boxCornerRadiusTopEnd="8dp"
            app:boxCornerRadiusTopStart="8dp"
            app:boxCornerRadiusBottomStart="8dp"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            app:hintTextColor="@color/purpleU1"
            android:layout_marginStart="16dp"
            android:hint="@string/expiry">
            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/dialog_expiry"
                android:layout_width="match_parent"
                android:inputType="phone"
                android:maxLength="7"
                android:layout_height="match_parent"
                android:fontFamily="@font/poppins_medium"
                android:textSize="14sp"
                android:textColor="@color/black"/>
        </com.google.android.material.textfield.TextInputLayout>
    </LinearLayout>
    <com.google.android.material.button.MaterialButton
        android:id="@+id/addBtn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/ll1"
        android:padding="15dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:backgroundTint="@color/purpleU1"
        android:layout_marginTop="20dp"
        android:layout_marginBottom="20dp"
        app:cornerRadius="8dp"
        android:fontFamily="@font/poppins_medium"
        android:text="@string/add_card_btn"
        android:textAllCaps="false"
        app:layout_constraintBottom_toBottomOf="parent"
        />
    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        app:layout_constraintTop_toBottomOf="@id/addBtn"/>
    </androidx.constraintlayout.widget.ConstraintLayout>



</RelativeLayout>