<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="#FFFFFF"
    android:layout_height="wrap_content">

    <com.google.android.material.card.MaterialCardView
        android:id="@+id/ratingCardView"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:cardElevation="-10dp"
        android:layout_marginTop="10dp"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginBottom="8dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/white">
            <ImageView
                android:id="@+id/ratingImage"
                android:layout_width="44dp"
                android:layout_height="44dp"
                android:background="@drawable/circle_background"
                android:scaleType="centerCrop"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintStart_toStartOf="parent" />
            <TextView
                android:id="@+id/ratingName"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintStart_toEndOf="@id/ratingImage"
                android:text="@string/adam"
                android:textSize="16sp"
                android:textColor="@color/black"
                android:fontFamily="@font/poppins_semi_bold"
                android:layout_marginStart="10dp"
                android:textAllCaps="false" />
            <RatingBar
                android:id="@+id/ratingStar"
                app:layout_constraintTop_toBottomOf="@id/ratingName"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:numStars="5"
                android:rating="4"
                style="?android:attr/ratingBarStyleSmall"
                android:progressTint="#EAC92C"
                android:layout_marginStart="10dp"
                app:layout_constraintStart_toEndOf="@id/ratingImage"
                />
            <TextView
                android:id="@+id/timeRating"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toBottomOf="@id/ratingName"
                app:layout_constraintEnd_toEndOf="parent"
                android:text="@string/_16_minutes_ago"
                android:textSize="12sp"
                android:textColor="@color/black"
                />
            <kr.co.prnd.readmore.ReadMoreTextView
                android:id="@+id/messageRating"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toBottomOf="@id/ratingStar"
                app:layout_constraintStart_toStartOf="parent"
                android:layout_marginStart="54dp"
                app:layout_constraintEnd_toEndOf="parent"
                android:layout_marginEnd="42dp"
                app:readMoreText="  Read more"
                app:readMoreMaxLine="2"
                android:layout_marginTop="5dp"
                app:readMoreColor="@color/purple_200"
                android:fontFamily="@font/poppins_medium"

                android:textColor="#828A89"
                android:text="@string/lorem_ipsum" />


        </androidx.constraintlayout.widget.ConstraintLayout>

    </com.google.android.material.card.MaterialCardView>
    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        app:layout_constraintTop_toBottomOf="@id/ratingCardView"
        android:background="#0D000000"
        android:layout_marginTop="5dp"/>


</androidx.constraintlayout.widget.ConstraintLayout>